objects/Unit__c/fields/Additional_Storage_Space__c.field-meta.xml
<CustomField>
    <fullName>Additional_Storage_Space__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Storage Space</label>
    <type>Checkbox</type>
</CustomField>