objects/Unit__c/fields/Amenities__c.field-meta.xml
<CustomField>
    <fullName>Amenities__c</fullName>
    <label>Amenities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Swimming Pool</fullName>
            </value>
            <value>
                <fullName>Gym</fullName>
            </value>
            <value>
                <fullName>Basketball court</fullName>
            </value>
            <value>
                <fullName>Washer and Dryer in-unit</fullName>
            </value>
            <value>
                <fullName>Dishwasher</fullName>
            </value>
            <value>
                <fullName>High-end Finishes and Fixtures</fullName>
            </value>
            <value>
                <fullName>Central air conditioning and Heating</fullName>
            </value>
            <value>
                <fullName>Balcony</fullName>
            </value>
            <value>
                <fullName>Smart home</fullName>
            </value>
            <value>
                <fullName>Security systems and intercom</fullName>
            </value>
            <value>
                <fullName>Large bathtubs</fullName>
            </value>
            <value>
                <fullName>Complimentary Wi-Fi</fullName>
            </value>
            <value>
                <fullName>Online Rent Options</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>