objects/Unit__c/fields/Analytics__c.field-meta.xml
<CustomField>
    <fullName>Analytics__c</fullName>
    <label>Analytics</label>
    <length>255</length>
    <type>Text</type>
</CustomField>