objects/Unit__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>