objects/Unit__c/fields/Balcony_Area__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Area__c</fullName>
    <label>Balcony Area (Sqft)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>