objects/Unit__c/fields/Balcony_Count__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Count__c</fullName>
    <label>Balcony Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>