objects/Unit__c/fields/Car_Parking_Area__c.field-meta.xml
<CustomField>
    <fullName>Car_Parking_Area__c</fullName>
    <label>Car Parking Area (Sqft)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>