objects/Unit__c/fields/Carpet_Area__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area__c</fullName>
    <label>Carpet Area (sqft)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>