objects/Unit__c/fields/Display_Preference__c.field-meta.xml
<CustomField>
    <fullName>Display_Preference__c</fullName>
    <label>Display Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corner Units</fullName>
            </value>
            <value>
                <fullName>High Foot Traffic Areas</fullName>
            </value>
            <value>
                <fullName>Shopping Malls (Near Anchors or Entrances)</fullName>
            </value>
            <value>
                <fullName>Tourist Areas</fullName>
            </value>
            <value>
                <fullName>Residential Neighborhood Corners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>