objects/Unit__c/fields/Floor_Number__c.field-meta.xml
<CustomField>
    <fullName>Floor_Number__c</fullName>
    <label>Floor Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>