objects/Unit__c/fields/Full_Unit_Label__c.field-meta.xml
<CustomField>
    <fullName>Full_Unit_Label__c</fullName>
    <formula>Property__r.Name +&apos;-&apos;+ Tower__r.Name + &apos;-&apos; + Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Unit Label</label>
    <type>Text</type>
</CustomField>