objects/Unit__c/fields/Furnishings__c.field-meta.xml
<CustomField>
    <fullName>Furnishings__c</fullName>
    <label>Furnishings</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Furnished</fullName>
            </value>
            <value>
                <fullName>Semi Furnished</fullName>
            </value>
            <value>
                <fullName>Unfurnished</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>