objects/Unit__c/fields/Handover__c.field-meta.xml
<CustomField>
    <fullName>Handover__c</fullName>
    <label>Handover</label>
    <type>Date</type>
</CustomField>