objects/Unit__c/fields/Map_URL__c.field-meta.xml
<CustomField>
    <fullName>Map_URL__c</fullName>
    <formula>HYPERLINK(
&quot;https://www.google.com/maps?q=&quot; &amp;
TEXT(Location__Latitude__s) &amp; &quot;,&quot; &amp;
TEXT(Location__Longitude__s),
&quot;View on Map&quot;,
&quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map URL</label>
    <type>Text</type>
</CustomField>