objects/Unit__c/fields/No_Of_Parking_Area__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Parking_Area__c</fullName>
    <label>No.Of.Parking Area</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>