objects/Unit__c/fields/Number_of_Seating_space__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Seating_space__c</fullName>
    <label>Number of Seating space</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>