objects/Unit__c/fields/Payment_plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_plan__c</fullName>
    <label>Payment plan</label>
    <length>18</length>
    <type>Text</type>
</CustomField>