objects/Unit__c/fields/Phase_Name__c.field-meta.xml
<CustomField>
    <fullName>Phase_Name__c</fullName>
    <label>Phase Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>