objects/Unit__c/fields/Private_Terrace_Area__c.field-meta.xml
<CustomField>
    <fullName>Private_Terrace_Area__c</fullName>
    <label>Private Terrace Area (Sqft)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>