objects/Unit__c/fields/Saleable_Area__c.field-meta.xml
<CustomField>
    <fullName>Saleable_Area__c</fullName>
    <label>Saleable Area (Sqft)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>