objects/Unit__c/fields/Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Square_Footage__c</fullName>
    <label>Square Footage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>