objects/Unit__c/fields/Total_Carpet_Area__c.field-meta.xml
<CustomField>
    <fullName>Total_Carpet_Area__c</fullName>
    <formula>Carpet_Area__c + Balcony_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Carpet Area (Sqft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>