objects/Unit__c/fields/Total_Selling_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Selling_Amount__c</fullName>
    <label>Total Selling Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>