objects/Unit__c/fields/Unit_Plan_Link__c.field-meta.xml
<CustomField>
    <fullName>Unit_Plan_Link__c</fullName>
    <label>Unit Plan Link</label>
    <type>Url</type>
</CustomField>