objects/Unit__c/fields/Unit_Plan_Upload__c.field-meta.xml
<CustomField>
    <fullName>Unit_Plan_Upload__c</fullName>
    <label>Unit Plan Upload</label>
    <type>Url</type>
</CustomField>