objects/Unit__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <label>View</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sea View</fullName>
            </value>
            <value>
                <fullName>Marina View</fullName>
            </value>
            <value>
                <fullName>City View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>