objects/Unit__c/recordTypes/Commercial.recordType-meta.xml
<RecordType>
    <fullName>Commercial</fullName>
    <active>true</active>
    <description>Commercial Unit</description>
    <label>Commercial</label>
</RecordType>