objects/Unit__c/recordTypes/Residential.recordType-meta.xml
<RecordType>
    <fullName>Residential</fullName>
    <active>true</active>
    <description>Residential Unit</description>
    <label>Residential</label>
</RecordType>