objects/Unit__c/recordTypes/Retail.recordType-meta.xml
<RecordType>
    <fullName>Retail</fullName>
    <active>true</active>
    <description>Retail unit</description>
    <label>Retail</label>
</RecordType>